progressif/main/default/objects/CriterionAuthorization__c/CriterionAuthorization__c.object-meta.xml
<CustomObject>
    <label>Critère d&#39;autorisation</label>
    <nameField>
        <displayFormat>AUTCR-{0000}</displayFormat>
        <label>Nom du critère d’autorisation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Critères d&#39;autorisation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>