progressif/main/default/objects/CriterionAuthorization__c/fields/Authorization__c.field-meta.xml
<CustomField>
    <fullName>Authorization__c</fullName>
    <label>Autorisation</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Critères d&#39;autorisation</relationshipLabel>
    <relationshipName>ChildCriterionAuthorization</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>