progressif/main/default/objects/CriterionAuthorization__c/fields/BroadcastSpace__c.field-meta.xml
<CustomField>
    <fullName>BroadcastSpace__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Espace de diffusion</label>
    <referenceTo>BroadcastSpace__c</referenceTo>
    <relationshipLabel>Critères d&#39;autorisation</relationshipLabel>
    <relationshipName>ChildCriterionAuthorization</relationshipName>
    <type>Lookup</type>
</CustomField>