progressif/main/default/objects/CriterionAuthorization__c/fields/CriterionLabel__c.field-meta.xml
<CustomField>
    <fullName>CriterionLabel__c</fullName>
    <formula>CriterionOffer__r.criterion__r.LabelCriterion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Libellé du critère</label>
    <type>Text</type>
</CustomField>