progressif/main/default/objects/CriterionAuthorization__c/fields/CriterionOffer__c.field-meta.xml
<CustomField>
    <fullName>CriterionOffer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Critère de l&#39;offre</label>
    <referenceTo>OfferCriterion__c</referenceTo>
    <relationshipLabel>Critères d&#39;autorisation</relationshipLabel>
    <relationshipName>Criterion_of_the_offer_child</relationshipName>
    <type>Lookup</type>
</CustomField>