progressif/main/default/objects/CriterionAuthorization__c/fields/CriterionResponseAuthz__c.field-meta.xml
<CustomField>
    <fullName>CriterionResponseAuthz__c</fullName>
    <label>Réponse de critère</label>
    <length>250</length>
    <type>Text</type>
</CustomField>