progressif/main/default/objects/CriterionAuthorization__c/fields/CriterionToSendToOPA__c.field-meta.xml
<CustomField>
    <fullName>CriterionToSendToOPA__c</fullName>
    <formula>CriterionOffer__r.CriterionToSendToOPA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Critère à envoyer à OPA</label>
    <type>Checkbox</type>
</CustomField>