progressif/main/default/objects/CriterionAuthorization__c/fields/WayDiffusion__c.field-meta.xml
<CustomField>
    <fullName>WayDiffusion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moyen de Diffusion</label>
    <referenceTo>WayDiffusion__c</referenceTo>
    <relationshipLabel>Critères d&#39;autorisation</relationshipLabel>
    <relationshipName>ChildCriterionAuthorization2</relationshipName>
    <type>Lookup</type>
</CustomField>