progressif/main/default/objects/CriterionAuthorization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Authorization__c</columns>
    <columns>CriterionOffer__c</columns>
    <columns>CriterionResponseAuthz__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>